<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.arkavyapar.View.UI.SignUP_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/ic_path892" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileIV"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:civ_border_color="#ed8c70"
                    app:civ_border_width="@dimen/padding_5"
                    android:onClick="selectProfileDP"
                    android:src="@drawable/ic_selectchoose_profile"
                 />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_5"
                    android:fontFamily="@font/poppinsregular"
                    android:paddingStart="@dimen/padding_5"
                    android:text="Upload Your Photo"
                    android:textColor="#606060"
                    android:textSize="@dimen/dimen_16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight="1.5"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dimen_25dp"
                    android:layout_marginEnd="@dimen/dimen_25dp"
                    android:gravity="center|top"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/fullNameED"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:backgroundTint="#707070"
                        android:hint="@string/full_name"
                        android:textColor="#707070"
                        android:inputType="textPersonName"
                        android:fontFamily="@font/poppinsregular"
                        android:textColorHint="#707070"/>
                    <EditText
                        android:id="@+id/mobileED"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:backgroundTint="#707070"
                        android:hint="@string/mobile"
                        android:maxLength="10"
                        android:inputType="phone"
                        android:fontFamily="@font/poppinsregular"
                        android:layout_marginTop="@dimen/padding_10"
                        android:textColor="#707070"
                        android:textColorHint="#707070"/>
                    <EditText
                        android:id="@+id/emailED"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:backgroundTint="#707070"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/poppinsregular"
                        android:layout_marginTop="@dimen/padding_10"
                        android:textColor="#707070"
                        android:textColorHint="#707070"/>
                    <EditText
                        android:id="@+id/passwordED"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:backgroundTint="#707070"
                        android:layout_marginTop="@dimen/padding_10"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:fontFamily="@font/poppinsregular"
                        android:textColor="#707070"
                        android:textColorHint="#707070"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_40dp"
                    android:background="@drawable/green_btn_ripple"
                    android:fontFamily="@font/arialbold"
                    android:gravity="center"
                    android:paddingStart="@dimen/dimen_20dp"
                    android:paddingEnd="@dimen/dimen_20dp"
                    android:text="Sign me up!"
                    android:onClick="hitsignUpDone"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_16dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/padding_5"
                        android:src="@drawable/ic_unselect_idecator" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/padding_10"
                        android:paddingTop="@dimen/padding_5"
                        android:src="@drawable/ic_selected_indicator" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/padding_10"
                        android:paddingTop="@dimen/padding_5"
                        android:src="@drawable/ic_unselect_idecator" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/padding_10"
                        android:paddingTop="@dimen/padding_5"
                        android:src="@drawable/ic_unselect_idecator" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>